--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9",
         "intervention/image": "^2.7",
+        "kreait/laravel-firebase": "*",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
